objects/LLCLP__Field_Group__c.object
<CustomObject>
    <fields>
        <fullName>LLCLP__Factors__c</fullName>
        <inlineHelpText>Leave blank or enter each factor on a new line in | delimited format:

Context Object API Name|Context Field API Name|The value to match
Context Object API Name|Context Field API Name|Another value to match</inlineHelpText>
        <label>Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLCLP__Group__c</fullName>
        <label>Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLCLP__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Group</label>
    <listViews>
        <fullName>LLCLP__All</fullName>
        <columns>LLCLP__Group__c</columns>
        <columns>LLCLP__Object_Name__c</columns>
        <columns>NAME</columns>
        <columns>LLCLP__Factors__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>